meteor-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: meteor-tutorial
  labels:
    app: meteor-tutorial
    app.kubernetes.io/component: meteor-tutorial
    app.kubernetes.io/instance: meteor-tutorial
    app.kubernetes.io/name: meteor-tutorial
    app.kubernetes.io/part-of: meteor-tutorial
spec:
  ports:
    - name: 3000-tcp
      protocol: TCP
      port: 3000
      targetPort: 3000
  selector:
    app: meteor-tutorial
    deploymentconfig: meteor-tutorial
